Updates to the UI so that expand/collapse 'top level' boxes have a tooltip.  THis required them to be converted to buttons, since otherwise the size isn't large enough to effectively handle the tooltip.  Issue #12

--- a/NMTK_apps/NMTK_ui/static/NMTK_ui/css/base-admin-2.css
+++ b/NMTK_apps/NMTK_ui/static/NMTK_ui/css/base-admin-2.css
@@ -1608,3 +1608,6 @@ color: #000 !important;
 	margin-right: 13px;
 	margin-top: 10px;
 }
+.btn-right {
+	margin-top: 5px;
+}
